--- a/src/app/components/banner/offer-banner/add.offer-banner.html
+++ b/src/app/components/banner/offer-banner/add.offer-banner.html
@@ -17,8 +17,8 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-body">
-                                <h4 class="card-title text-center">Main Banners</h4>
-                                <a routerLink="/banner" id="show" class="btn  btn-maron" style="float: right;    margin-top: -45px;">Back</a>
+                                <h4 class="card-title text-center">Best Offers</h4>
+                                <a routerLink="/offersBanners" id="show" class="btn  btn-maron" style="float: right;    margin-top: -45px;">Back</a>
                                 <form class="cmxform" id="signupForm" method="get" action="#">
                                     <fieldset>
                                         <div class="form-group">
