--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -60,6 +60,8 @@
                 <li routerLink="/bestAppliances" routerLinkActive='active'><a>Best Appliances</a></li>
                 <li routerLink="/bestDiscountAppliances" routerLinkActive='active'><a>Best Discount Appliances</a></li>
                 <li routerLink="/bestBrands" routerLinkActive='active'><a>Popular Brands</a></li>
+                <li routerLink="/offersBanners" routerLinkActive='active'><a>Best Offers</a></li>
+                <li routerLink="/helpBanners" routerLinkActive='active'><a>Help Banners</a></li>
             </ul>
             <li class="nav-item" [ngClass]="{'active':pageNav==='location'}">
                 <a class="nav-link" routerLink="/location">
