--- a/src/app/components/banner/best-appliances/add.best-appliances.html
+++ b/src/app/components/banner/best-appliances/add.best-appliances.html
@@ -17,14 +17,17 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-body">
-                                <h4 class="card-title text-center">Best Appliances Banners</h4>
+                                <h4 class="card-title text-center">Best Appliances</h4>
                                 <a routerLink="/bestAppliances" id="show" class="btn  btn-maron" style="float: right;    margin-top: -45px;">Back</a>
                                 <form class="cmxform" id="signupForm" method="get" action="#">
                                     <fieldset>
                                         <div class="form-group">
-                                            <label for="exampleInputEmail1">Title</label>
-                                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="title" name="title"
-                                                placeholder="Main banners" style="width: 400px">
+                                            <label for="sel1">Title</label>
+                                            <select class="form-control border-primary" id="sel1" style="width:400px" (change)="bannerPosition($event.target.value)">
+                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                                                <option value="" disabled>Select banner type</option>
+                                                <option *ngFor="let item of positions" value="{{item.banner_position}}">{{item.banner_position}}</option>
+                                            </select>
                                         </div>
                                         <div class="row">
                                             <div class="col-md-12 col-sm-12">
