--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -24,7 +24,7 @@
                     <span class="menu-title sub">Sub Categories </span>
                 </a>
             </li>
-            <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='vendors' || pageNav==='addvendors'}">
+            <li class="nav-item" [ngClass]="{'active':pageNav==='vendors' || pageNav==='addvendors'}">
                 <a class="nav-link" routerLink="/vendors">
                     <i class="icon-people menu-icon"></i>
                     <span class="menu-title">Admin List</span>
@@ -35,7 +35,7 @@
                     <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
                     <span class="menu-title sub">Coupon Management</span>
                 </a>
-            </li> -->
+            </li>
             <li class="nav-item" [ngClass]="{'active':pageNav==='products' || pageNav==='addproducts'}">
                 <a class="nav-link" routerLink="/prducts">
                     <i class="fa fa-product-hunt" aria-hidden="true"></i>
@@ -70,7 +70,7 @@
                 </a>
             </li>
 
-            <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='location'}">
+            <li class="nav-item" [ngClass]="{'active':pageNav==='location'}">
                 <a class="nav-link" routerLink="/location">
                     <i class="fa fa-map-marker"></i>
                     <span class="menu-title sub">Location Management</span>
@@ -110,7 +110,7 @@
                     <i class="icon-people menu-icon"></i>
                     <span class="menu-title">Loyalty Management</span>
                 </a>
-            </li> -->
+            </li>
 
             <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='wholesellers' || pageNav==='addwholesellers'}">
                     <a class="nav-link" routerLink="/wholesellers">
